[gd_scene load_steps=10 format=3 uid="uid://qe848qfv3emu"]

[ext_resource type="Script" path="res://players/weapons/rush_coil.gd" id="1_edrj1"]
[ext_resource type="Texture2D" uid="uid://cravk65d6m07q" path="res://assets/sprites/player/weapons/megaman/rush_coil.png" id="1_wo7ha"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sjwi7"]
atlas = ExtResource("1_wo7ha")
region = Rect2(0, 0, 35, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1lut"]
atlas = ExtResource("1_wo7ha")
region = Rect2(70, 0, 35, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw7od"]
atlas = ExtResource("1_wo7ha")
region = Rect2(105, 0, 35, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfwae"]
atlas = ExtResource("1_wo7ha")
region = Rect2(35, 0, 35, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_emuap"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjwi7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1lut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw7od")
}],
"loop": false,
"name": &"spawn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfwae")
}],
"loop": false,
"name": &"spring",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0i0m0"]
size = Vector2(20, 5.66667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvs0a"]
size = Vector2(7.66667, 8)

[node name="rush_coil" type="CharacterBody2D" groups=["rush_coil"]]
scale = Vector2(3, 3)
collision_layer = 0
script = ExtResource("1_edrj1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -3.66667)
sprite_frames = SubResource("SpriteFrames_emuap")
animation = &"spawn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.666667, 8.5)
shape = SubResource("RectangleShape2D_0i0m0")

[node name="jump_zone" type="Area2D" parent="." groups=["spring"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="jump_zone"]
position = Vector2(3.83333, -5.66667)
shape = SubResource("RectangleShape2D_rvs0a")

[node name="move_back_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="jump_zone" to="." method="_on_jump_zone_body_entered"]
[connection signal="timeout" from="move_back_timer" to="." method="_on_move_back_timer_timeout"]
